RESOLVED FIXED100979
Fix HAVE(NETWORK_CFDATA_ARRAY_CALLBACK) build
https://bugs.webkit.org/show_bug.cgi?id=100979
Summary Fix HAVE(NETWORK_CFDATA_ARRAY_CALLBACK) build
Alexey Proskuryakov
Reported 2012-11-01 12:38:54 PDT
Introduction of ResourceBuffer and some other recent changes have broken NETWORK_CFDATA_ARRAY_CALLBACK build on Mac.
Attachments
proposed patch (3.40 KB, patch)
2012-11-01 12:42 PDT, Alexey Proskuryakov
joepeck: review+
buildbot: commit-queue-
with more fixes (8.33 KB, patch)
2012-11-01 13:59 PDT, Alexey Proskuryakov
joepeck: review+
Alexey Proskuryakov
Comment 1 2012-11-01 12:42:12 PDT
Created attachment 171910 [details] proposed patch
Joseph Pecoraro
Comment 2 2012-11-01 12:46:56 PDT
Comment on attachment 171910 [details] proposed patch r=me
Build Bot
Comment 3 2012-11-01 13:02:02 PDT
Comment on attachment 171910 [details] proposed patch Attachment 171910 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14661697
Alexey Proskuryakov
Comment 4 2012-11-01 13:59:20 PDT
Created attachment 171923 [details] with more fixes Didn't realize that this could not be protected with USE(CF). Anyway, added some more fixes, so this needs new review.
Joseph Pecoraro
Comment 5 2012-11-01 14:02:32 PDT
Comment on attachment 171923 [details] with more fixes View in context: https://bugs.webkit.org/attachment.cgi?id=171923&action=review r=me > Source/WTF/wtf/Platform.h:595 > +#define HAVE_NETWORK_CFDATA_ARRAY_CALLBACK 1 // FIXME: All CFNetwork based platforms have this callback now, so it should be USE, not HAVE. I agree. Should you just change this now? Modifying Platform.h to have this comment will cause everyone to need to do a full build anyways.
Alexey Proskuryakov
Comment 6 2012-11-01 14:10:42 PDT
I can do a global rename when landing, just didn't want it to complicate review.
Alexey Proskuryakov
Comment 7 2012-11-01 14:13:52 PDT
Actually, I'd prefer to do it in a separate change landed immediately after.
Alexey Proskuryakov
Comment 8 2012-11-01 15:29:50 PDT
Note You need to log in before you can comment on or make changes to this bug.