Source/WebCore/loader/ResourceBuffer.h
@@ -73,6 +73,9 @@ public:
 #if USE(CF)
     CFDataRef createCFData();
 #endif
+#if HAVE(NETWORK_CFDATA_ARRAY_CALLBACK)
+    void append(CFDataRef);
+#endif
 
     void reportMemoryUsage(MemoryObjectInfo*) const;
 
